--- a/MauiAudio.Sample/MainPage.xaml
+++ b/MauiAudio.Sample/MainPage.xaml
@@ -2,10 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MauiAudio.Sample"
+             x:DataType="local:MainPageViewModel"
              x:Class="MauiAudio.Sample.MainPage">
-    <!--<ContentPage.BindingContext>
-        <local:MainPageViewModel/>
-    </ContentPage.BindingContext>-->
     <ScrollView>
         <VerticalStackLayout
             Spacing="25"
@@ -13,6 +11,7 @@
             VerticalOptions="Center">
             <Entry Text="{Binding Url}"/>
             <Button Text="Start" Command="{Binding PlayCommand}"/>
+            <Button Text="Play in Stream" Command="{Binding PlayInStreamCommand}"/>
         </VerticalStackLayout>
     </ScrollView>
 
